Istio/Basics/v5/details.yml
##################################################################################################
# Details service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: details
  labels:
    app: details
    service: details
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: details

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v1
  labels:
    app: details
    version: v1
spec:
  replicas: 4
  selector:
    matchLabels:
      app: details
      version: v2
  template:
    metadata:
      labels:
        app: details
        version: v2
    spec:
      serviceAccountName: bookinfo-details
      containers:
      - name: details
        image: shaikkhajaibrahim/details:v3
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 9080
